Fixed: vertical scrollbar bug

--- a/src/app/css/main.css
+++ b/src/app/css/main.css
@@ -59,7 +59,7 @@ textarea {
 html, body {
     height: 100%;
     width: 100%;
-    overflow-x: hidden;
+    overflow: hidden;
     position: fixed;
 }
 /* ==========================================================================
